[wrapper-tracing] Do not trace ActiveScriptWrappables with detached execution contexts

BUG=chromium:667746

Review-Url: https://codereview.chromium.org/2515293005
Cr-Commit-Position: refs/heads/master@{#434171}